[package]
name = "zeroboost"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeroboost"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["borsh", "metadata"] }
curve = { path = "../../curve" }
raydium-cp-swap = { version = "0.1.0", features = [
  "no-entrypoint",
  "cpi",
  "devnet",
], git = "https://github.com/raydium-io/raydium-cp-swap" }
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
pyth-sdk-solana = "0.10.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
